<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/subscribe_resuming_btn"
        android:text="@string/subscribe_resuming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <Button
        android:id="@+id/subscribe_non_resuming_btn"
        android:text="@string/subscribe_non_resuming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/subscribe_authorized_btn"
        android:text="@string/subscribe_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/unsubscribe"
        android:text="@string/unsubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/get_request_btn"
        android:text="@string/get_request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/get_request_authorized_btn"
        android:text="@string/get_request_private"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
